--- a/Thread/build.gradle
+++ b/Thread/build.gradle
@@ -34,7 +34,7 @@ android {
 
 dependencies {
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    compileOnly "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compileOnly 'androidx.appcompat:appcompat:1.3.0'
     compileOnly 'androidx.annotation:annotation:1.2.0'
     compileOnly 'androidx.lifecycle:lifecycle-livedata-core:2.3.1'
