--- a/Thread/build.gradle
+++ b/Thread/build.gradle
@@ -33,8 +33,8 @@ android {
 }
 
 dependencies {
-
     compileOnly "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    compileOnly 'androidx.core:core-ktx:1.5.0'
     compileOnly 'androidx.appcompat:appcompat:1.3.0'
     compileOnly 'androidx.annotation:annotation:1.2.0'
     compileOnly 'androidx.lifecycle:lifecycle-livedata-core:2.3.1'
