--- a/Thread/build.gradle
+++ b/Thread/build.gradle
@@ -37,6 +37,40 @@ dependencies {
     compileOnly 'androidx.core:core-ktx:1.5.0'
     compileOnly 'androidx.appcompat:appcompat:1.3.0'
     compileOnly 'androidx.annotation:annotation:1.2.0'
-    compileOnly 'androidx.lifecycle:lifecycle-livedata-core:2.3.1'
+    compileOnly 'androidx.lifecycle:lifecycle-livedata-core-ktx:2.3.1'
     compileOnly 'com.github.cjfsss:EnergyThread:0.0.2'
+}
+
+
+apply plugin: 'maven'
+uploadArchives {
+    repositories.mavenDeployer {
+        repository(url: "file:///C:/Users/Administrator/.m2/repository")
+        pom.project{
+            groupId = "energy"
+            artifactId = "thread-ktx"
+            version = "0.0.2"
+        }
+    }
+
+    // type显示指定任务类型或任务, 这里指定要执行Javadoc这个task,这个task在gradle中已经定义
+    task androidJavadocs(type: Javadoc) {
+        // 设置源码所在的位置
+        source = android.sourceSets.main.java.sourceFiles
+    }
+    // 生成javadoc.jar
+    task androidJavadocsJar(type: Jar) {
+        // 指定文档名称
+        classifier = 'javadoc'
+        from androidJavadocs.destinationDir
+    }
+    task androidSourcesJar(type: Jar) {
+        // 指定文档名称
+        classifier = 'source'
+        from android.sourceSets.main.java.sourceFiles
+    }
+    artifacts {
+        archives androidSourcesJar
+        archives androidJavadocsJar
+    }
 }
