--- a/build.gradle
+++ b/build.gradle
@@ -12,12 +12,12 @@ buildscript {
         maven {
             url 'https://jitpack.io'
         }
-        jcenter() { url 'https://jcenter.bintray.com/' }
+        mavenCentral() { url 'https://jcenter.bintray.com/' }
         maven { url 'file:///C:/Users/Administrator/.m2/repository' }
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.0.2"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.4.32"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
